z-index bug fix

--- a/less/trickle-button.less
+++ b/less/trickle-button.less
@@ -4,13 +4,13 @@
 
 .trickle {
   &__inner {
-    z-index: 500;
+    z-index: 80;
   }
 
   &__btn {
     display: block;
     width: 100%;
-    z-index: 500;
+    z-index: 80;
   }
 
   &__btn-icon .icon {
